--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,55 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="80dp"
+    android:height="80dp"
+    android:viewportWidth="80"
+    android:viewportHeight="80">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="m20.111,9.002h43.654a7.234,7.234 45,0 1,7.234 7.234L70.998,61.825a9.174,9.174 135,0 1,-9.174 9.174L17.932,70.998A8.93,8.93 45,0 1,9.002 62.069L9.002,20.111A11.109,11.109 135,0 1,20.111 9.002Z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.004"
+        android:fillColor="#e6dfdf"
+        android:strokeColor="#1d1d1d"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M23.213,56.784m-5.289,0a5.289,5.289 0,1 1,10.578 0a5.289,5.289 0,1 1,-10.578 0"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.004"
+        android:fillColor="#000000"
+        android:strokeColor="#1d1d1d"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M58.283,22.011m-5.289,0a5.289,5.289 0,1 1,10.578 0a5.289,5.289 0,1 1,-10.578 0"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.004"
+        android:fillColor="#000000"
+        android:strokeColor="#1d1d1d"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M22.836,39.468m-5.289,0a5.289,5.289 0,1 1,10.578 0a5.289,5.289 0,1 1,-10.578 0"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.004"
+        android:fillColor="#000000"
+        android:strokeColor="#1d1d1d"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M58.998,56.032m0.267,5.282a5.289,5.289 132.104,1 1,-0.534 -10.565a5.289,5.289 132.104,1 1,0.534 10.565"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.004"
+        android:fillColor="#000000"
+        android:strokeColor="#1d1d1d"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M22.498,22.764m0.267,5.282a5.289,5.289 132.104,1 1,-0.534 -10.565a5.289,5.289 132.104,1 1,0.534 10.565"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.004"
+        android:fillColor="#000000"
+        android:strokeColor="#1d1d1d"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M58.857,38.471m-5.289,0a5.289,5.289 0,1 1,10.578 0a5.289,5.289 0,1 1,-10.578 0"
+        android:strokeLineJoin="round"
+        android:strokeWidth="2.004"
+        android:fillColor="#000000"
+        android:strokeColor="#1d1d1d"
+        android:strokeLineCap="round"/>
 </vector>
